--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-faq-component": "^1.3.4",
     "react-icons": "^4.4.0",
     "react-idle-timer": "^5.4.0",
     "react-router-dom": "^6.3.0",
