--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-faq-component": "^1.3.4",
     "react-icons": "^4.4.0",
-    "react-idle-timer": "^5.4.0",
+    "react-idle-timer": "^5.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
